[#164] Refactor: PR 리뷰 반영